# agent

./: 404.html  README.md  Taskfile.yaml  go.mod  go.sum  index.html  main.go  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml
docs/: 01_agent_.md  02_tool_.md  03_toolresponse_.md  04_agenthooks_.md  05_mcpendpoint_.md  06_rpkmcpendpoint_.md  07_mcp_client_.md  08_runtimeserver_.md  index.md
docs/reference/: agents.md  index.md  runtime.md
docs/tutorial/: 01_agent_.md  02_tool_.md  03_toolresponse_.md  04_agenthooks_.md  05_mcpendpoint_.md  07_mcp_client_.md  08_runtimeserver_.md  index.md
examples/caches/repo/resources/caches/: meows.yaml
examples/connect_integration/: pipeline_dev.py
examples/connect_integration/mcp/resources/caches/: directory.yaml
examples/connect_integration/mcp/resources/processors/: dev_tools.star
examples/observability/: README.md  docker_compose.yaml  redpanda_agents.yaml
examples/observability/agents/: weather.py
examples/observability/mcp/o11y/: tracer.yaml
examples/observability/o11y/prometheus/: prometheus.yml
examples/observability/repo/resources/caches/: meows.yaml
examples/simple/repo/resources/caches/: cachedir.yaml
examples/stream_agent/: README.md  redpanda_agents.yaml
examples/stream_agent/agents/: redleader.py
examples/stream_agent/mcp/resources/processors/: gdrive_search.yaml
examples/weather_agent_repl/: redpanda_agents.yaml
examples/weather_agent_repl/agents/: weather.py
internal/repository/: scanner.go
internal/tools/: wrapper.go
proto/redpanda/runtime/proto/: runtime.proto
reference/agents/: index.html
reference/runtime/: index.html
search/: search_index.json
src/agents/: __init__.py  agent.py  mcp.py  tools.py
src/redpanda/agents/: __init__.py  _agent.py  _mcp.py  _tools.py
src/redpanda/runtime/: __init__.py  _grpc.py  _otel.py
src/redpanda/runtime/proto/: runtime_pb2.py  runtime_pb2.pyi  runtime_pb2_grpc.py  runtime_pb2_grpc.pyi
tests/: test_agents.py
tutorial/: index.html
tutorial/01_agent_/: index.html
tutorial/02_tool_/: index.html
tutorial/03_toolresponse_/: index.html
tutorial/04_agenthooks_/: index.html
tutorial/05_mcpendpoint_/: index.html
tutorial/07_mcp_client_/: index.html
tutorial/08_runtimeserver_/: index.html
